--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 			<h1><a href="https://github.com/dannyx0/html-to-scss">HTML to SCSS</a></h1>
 
 			<p class="lead">Node.js process that parses HTML to <a href="http://sass-lang.com/">Sass</a> SCSS.</p>
+			<p><strong><a href="">Things to Note</a>:</strong> The parser is a work in progress but will accurately represent the DOM. You should use <a href="http://smacss.com/">SMACCS</a> for scalability.</p>
 			<p>Learn more about the project, including the npm package at <a href="https://github.com/dannyx0/html-to-scss">the GitHub project page</a>. <br>Sometimes the server dies, and, well, that's just no fun but it would help if you <a href="https://github.com/dannyx0/html-to-scss/issues">submit an issue on GitHub</a> with the input value.</p>
 
 		</header>
